--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,7 +88,7 @@ workflows:
       #     tag: 0.1.0
       #     requires:
       #       - aws-ecr/build-and-push-image
-      - install_helm_chart:
+      - install_helm_chart
           # requires:
           #   - aws-ecr/push-helm-chart
 
