--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2.1
 
-# orbs:
+orbs:
+  aws-cli: circleci/aws-cli@5.2.0
 #   aws-ecr: orbies/aws-ecr@1.2.1
-#   aws-cli: circleci/aws-cli@5.2.0
 
 executors:
   docker-executor:
@@ -12,36 +12,35 @@ executors:
 
 jobs:
   install_helm_chart:
-    executor: docker-executor # ✅ Using the defined executor
+    executor: aws-cli/default
     steps:
       - checkout
-      # - setup_remote_docker:
-      #     version: 20.10.7
-      - run:
-          name: Install awscli
-          command: curl --silent "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && unzip awscliv2.zip && sudo ./aws/install
+      - aws-cli/setup:
+          profile_name: $OIDC_PROFILE
+          role_arn: arn:aws:iam::$AWS_ACCOUNT_ID:role/$OIDC_ROLE  # ✅ Uses OIDC role
+          role_session_name: $OIDC_SESSION
+      # - run:
+      #     name: Install awscli
+      #     command: curl --silent "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && unzip awscliv2.zip && sudo ./aws/install
       - run:
           name: Install eksctl
           command: curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp && sudo mv /tmp/eksctl /usr/local/bin
       - run:
           name: Install and configure kubectl
           command: curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl && kubectl version --client
-      # - run:
-      #     name: Install and configure kubectl aws-iam-authenticator
-      #     command: curl -Lo aws-iam-authenticator https://github.com/kubernetes-sigs/aws-iam-authenticator/releases/download/v0.5.9/aws-iam-authenticator_0.5.9_linux_amd64 && chmod +x ./aws-iam-authenticator && mkdir -p $HOME/bin && cp ./aws-iam-authenticator $HOME/bin/aws-iam-authenticator && export PATH=$PATH:$HOME/bin
       - run:
           name: Install and configure helm
           command: sudo curl -L https://get.helm.sh/helm-v3.10.1-linux-amd64.tar.gz | tar xz && sudo mv linux-amd64/helm /bin/helm && sudo rm -rf linux-amd64
-      - run:
-          name: Configure AWS CLI with Temporary Credentials
-          command: |
-            mkdir -p ~/.aws
-            echo "[default]" > ~/.aws/credentials
-            echo "aws_access_key_id = $AWS_ACCESS_KEY_ID" >> ~/.aws/credentials
-            echo "aws_secret_access_key = $AWS_SECRET_ACCESS_KEY" >> ~/.aws/credentials
-            echo "aws_session_token = $AWS_SESSION_TOKEN" >> ~/.aws/credentials
-            echo "[default]" > ~/.aws/config
-            echo "region = $AWS_DEFAULT_REGION" >> ~/.aws/config
+      # - run:
+      #     name: Configure AWS CLI with Temporary Credentials
+      #     command: |
+      #       mkdir -p ~/.aws
+      #       echo "[default]" > ~/.aws/credentials
+      #       echo "aws_access_key_id = $AWS_ACCESS_KEY_ID" >> ~/.aws/credentials
+      #       echo "aws_secret_access_key = $AWS_SECRET_ACCESS_KEY" >> ~/.aws/credentials
+      #       echo "aws_session_token = $AWS_SESSION_TOKEN" >> ~/.aws/credentials
+      #       echo "[default]" > ~/.aws/config
+      #       echo "region = $AWS_DEFAULT_REGION" >> ~/.aws/config
       - run:
           name: Verify AWS Authentication
           command: aws sts get-caller-identity
@@ -64,33 +63,72 @@ jobs:
 workflows:
   build_and_push_image:
     jobs:
-      # - aws-ecr/build-and-push-image:
-      #     executor: docker-executor # ✅ Using the defined executor
-      #     aws-access-key-id: AWS_ACCESS_KEY_ID
-      #     aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-      #     # aws-session-token: AWS_SESSION_TOKEN
-      #     repo: "${AWS_ECR_REPO_NAME}"
-      #     docker-login: false
-      #     account-url: AWS_ECR_ACCOUNT_URL
-      #     region: AWS_DEFAULT_REGION
-      #     tag: "v1.0"
-      # - aws-ecr/push-helm-chart:
-      #     executor: docker-executor # ✅ Using the defined executor
-      #     account-url: AWS_ECR_ACCOUNT_URL
-      #     aws-access-key-id: AWS_ACCESS_KEY_ID
-      #     aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-      #     # resource_class: medium  # ✅ Explicitly setting resource class
-      #     # aws-session-token: AWS_SESSION_TOKEN
-      #     create-repo: false
-      #     path: ./charts
-      #     region: AWS_DEFAULT_REGION
-      #     repo: "${AWS_ECR_HELM_REPO_NAME}"
-      #     tag: 0.1.0
-      #     requires:
-      #       - aws-ecr/build-and-push-image
       - install_helm_chart
-          # requires:
-          #   - aws-ecr/push-helm-chart
+
+# version: 2.1
+
+# orbs:
+#   aws-cli: circleci/aws-cli@5.2.0
+# #   aws-ecr: orbies/aws-ecr@1.2.1
+
+# executors:
+#   docker-executor:
+#     docker:
+#       - image: cimg/python:3.10.7
+#     resource_class: medium # ✅ Now resource_class is properly assign
+
+# jobs:
+#   install_helm_chart:
+#     executor: docker-executor # ✅ Using the defined executor
+#     steps:
+#       - checkout
+#       - run:
+#           name: Install awscli
+#           command: curl --silent "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" && unzip awscliv2.zip && sudo ./aws/install
+#       - run:
+#           name: Install eksctl
+#           command: curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp && sudo mv /tmp/eksctl /usr/local/bin
+#       - run:
+#           name: Install and configure kubectl
+#           command: curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl && kubectl version --client
+#       - run:
+#           name: Install and configure helm
+#           command: sudo curl -L https://get.helm.sh/helm-v3.10.1-linux-amd64.tar.gz | tar xz && sudo mv linux-amd64/helm /bin/helm && sudo rm -rf linux-amd64
+#       - run:
+#           name: Configure AWS CLI with Temporary Credentials
+#           command: |
+#             mkdir -p ~/.aws
+#             echo "[default]" > ~/.aws/credentials
+#             echo "aws_access_key_id = $AWS_ACCESS_KEY_ID" >> ~/.aws/credentials
+#             echo "aws_secret_access_key = $AWS_SECRET_ACCESS_KEY" >> ~/.aws/credentials
+#             echo "aws_session_token = $AWS_SESSION_TOKEN" >> ~/.aws/credentials
+#             echo "[default]" > ~/.aws/config
+#             echo "region = $AWS_DEFAULT_REGION" >> ~/.aws/config
+#       - run:
+#           name: Verify AWS Authentication
+#           command: aws sts get-caller-identity
+#       - run:
+#           name: "docker login"
+#           command: |
+#             aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ECR_ACCOUNT_URL
+#       - run:
+#           name: "helm login"
+#           command: |
+#             aws ecr get-login-password --region $AWS_DEFAULT_REGION | helm registry login --username AWS --password-stdin $AWS_ECR_ACCOUNT_URL
+#       - run:
+#           name: "cluster configs"
+#           command: |
+#             eksctl utils write-kubeconfig --cluster=$AWS_EKS_CLUSTER_NAME --region=$AWS_CLUSTER_REGION
+#       - run:
+#           name: "helm install"
+#           command: bash ./scripts/backend-helm.sh 0.1.0 $AWS_ECR_ACCOUNT_URL $AWS_ECR_HELM_REPO_NAME
+
+# workflows:
+#   build_and_push_image:
+#     jobs:
+#       - install_helm_chart
+
+
 
 # version: 2.1
 
